# openkb-web-ui

./: .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/openkb_web/: __init__.py  chat_stream.py  jobqueue.py  kb.py  main.py  wiki.py
backend/openkb_web/routers/: chat.py  documents.py  graph.py  jobs.py  pages.py  status.py
backend/tests/: conftest.py  helpers.py  test_chat.py  test_documents.py  test_graph.py  test_jobs.py  test_pages.py  test_security.py  test_status.py
docs/superpowers/specs/: 2026-07-06-openkb-web-ui-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  http.ts  sse.test.ts  sse.ts  types.ts
frontend/src/components/: AppLayout.tsx  ConfirmDialog.tsx  JobProgress.tsx  Markdown.test.tsx  Markdown.tsx  States.tsx
frontend/src/lib/: format.ts  graphColors.ts  theme.ts  wikilinks.test.ts  wikilinks.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Documents.tsx  Graph.tsx  Wiki.tsx
scripts/: make_demo_kb.py
