[project]
name = "openkb-web-backend"
version = "0.1.0"
description = "FastAPI backend for the OpenKB web UI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # openkb pins its runtime deps exactly (litellm==1.87.2, openai-agents==0.17.3, ...);
    # the in-process reads couple to some private helpers, so the pin matters.
    "openkb==0.4.3",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    # Also an openkb dependency; used directly for non-blocking shared-lock
    # acquisition in kb.read_locked (openkb.locks only exposes blocking flock).
    "portalocker",
]

[project.scripts]
openkb-web = "openkb_web.main:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.uv]
# openkb 0.4.3 pins pageindex==0.3.0.dev1 (a pre-release); uv refuses
# transitive pre-releases unless explicitly allowed.
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openkb_web"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
